[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resurses/Sprites/Player/NPlayer.png" type="Texture" id=1]
[ext_resource path="res://Resurses/Animation/Player/Run.tres" type="Animation" id=2]
[ext_resource path="res://Objects/AKM.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resurses/Sprites/Player/PLROneCH1.png" type="Texture" id=4]
[ext_resource path="res://Resurses/Sprites/Player/PLROneCH2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://Resurses/Sounds/run.mp3" type="AudioStream" id=7]
[ext_resource path="res://SoundEF.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resurses/Sounds/jump.mp3" type="AudioStream" id=9]
[ext_resource path="res://Resurses/Sprites/Player/PLRTwo.png" type="Texture" id=10]
[ext_resource path="res://Resurses/Sprites/Player/NNoga.png" type="Texture" id=11]
[ext_resource path="res://Resurses/Animation/Player/stopJump.tres" type="Animation" id=12]
[ext_resource path="res://Resurses/Animation/Player/Jump.tres" type="Animation" id=13]
[ext_resource path="res://Resurses/Particles/RunPart.tscn" type="PackedScene" id=14]
[ext_resource path="res://Resurses/Particles/JumpPart.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 65.0
height = 150.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 6 )

[node name="JumpPart" parent="." instance=ExtResource( 15 )]
position = Vector2( 0, 150 )

[node name="RunPart" parent="." instance=ExtResource( 14 )]
position = Vector2( 0, 150 )

[node name="NNoga2" type="Sprite" parent="."]
position = Vector2( 45, 135 )
rotation = -0.261799
texture = ExtResource( 11 )

[node name="NNoga" type="Sprite" parent="."]
position = Vector2( -30, 135 )
rotation = 0.261799
texture = ExtResource( 11 )

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlrOneCh1" type="Sprite" parent="."]
position = Vector2( -68, 50 )
texture = ExtResource( 4 )

[node name="AKM" parent="." instance=ExtResource( 3 )]
position = Vector2( -23, 68 )

[node name="PlrOneCh2" type="Sprite" parent="."]
position = Vector2( -42, 79 )
texture = ExtResource( 5 )

[node name="PlrTwo" type="Sprite" parent="."]
position = Vector2( 78, 64 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = ExtResource( 13 )
anims/Run = ExtResource( 2 )
anims/stopJump = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 19 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 4, 20 )
shape = SubResource( 1 )

[node name="RunAu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="JumpAu" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 9 )
